<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="usuario_label">Nome de Usuário:</string>
    <string name="senha_label">Senha:</string>
    <string name="entrar_button">Entrar</string>
    <string name="cadastrese_button">Cadastre-se</string>
    <string name="title_activity_tela_menu">TelaMenu</string>
    <string name="listaTarefas_button">Lista de Tarefas</string>
    <string name="conta_button">Conta</string>
    <string name="logoff_button">Logoff</string>
    <string name="title_activity_lista_tarefas">ListaTarefas</string>
    <string name="adicionarTarefa_button">Adicionar</string>
    <string name="voltarListaTarefas_button">Voltar</string>
    <string name="title_activity_conta">Conta</string>
    <string name="usuarioConta_label">Nome de Usuário:</string>
    <string name="senhaConta_label">Senha:</string>
    <string name="alterarConta_button">Alterar</string>
    <string name="salvarConta_button">Salvar</string>
    <string name="excluirConta_button">Excluir</string>
    <string name="voltarConta_button">Voltar</string>
    <string name="title_activity_adicionar_tarefa">AdicionarTarefa</string>
    <string name="nomeAdicionarTarefa_label">Nome da Tarefa:</string>
    <string name="descricaoAdicionarTarefa_label">Descrição da Tarefa:</string>
    <string name="salvarAdicionarTarefa_button">Salvar</string>
    <string name="voltarAdicionarTarefa_button">Voltar</string>
    <string name="title_activity_tela_cadastro">TelaCadastro</string>
    <string name="usuarioCadastro_label">Nome de usuário:</string>
    <string name="senhaCadastro_label">Senha:</string>
    <string name="cadastrar_button">Cadastrar</string>
    <string name="voltarCadastrese_button">Voltar</string>

</resources>
